@@ -1,3 +1,15 @@
+2012-12-19  Yael Aharon  <yael.aharon@intel.com>
+
+        [EFL] Allow the build system to find OpenGL ES
+        https://bugs.webkit.org/show_bug.cgi?id=104760
+
+        Reviewed by Laszlo Gombos.
+
+        Add a way to find if GLESv2 is supported by the build system.
+        Support for GLESv2 will be added separately.
+
+        * Source/cmake/FindGLES.cmake: Added.
+
 2012-12-19  Alexis Menard  <alexis@webkit.org>
 
         Implement CSS parsing for CSS transitions unprefixed.
